# Kinect-Azure-Captured-System

./: CMakeLists.txt
synchornized_capture_for_extrinsic_calibration/: CMakeLists.txt  Source.cpp
